2004-08-24  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* object.c: introduced fts_object_snatch() (secretly redefining an FTS object using memcopy from a new instance of the same class)

2004-08-19  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* class.c: simplified class equals_function and cop_function (adapted object set)
	* object.c: introduced fts_object_alloc (former fts_object_new) and fts_object_finalize to (includes/ftsprivate/object.h)

2004-08-18  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* class.c: introduced description_function to class
          (append object description to array which creates an empty object of the same kind - default function returns class name)
	* stack.h: added some macros for int and object (fts_object_t *) stacks

2004-08-13  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* expression.c: (bug fix) undefined but formerly used variables were void but not stated as undefined

2004-08-12  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* expression.c/h: added fts_expression_is_valid()

2004-08-11  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* removed tuple and varargs confusion from message system
	* removed method invocation (message sending) cache from object
	* introduced fts_message_cache_t (with API) and fts_send_message_with_cache() instead
	* (re-)introduced message cache to connections
	* removed or replaced calls of fts_object_has_id() by calls to fts_object_has_client() checking client id inplace of id

2004-07-29  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* configure.in: added flag for profiling and handling of FPE.
	profiling is for cprof (http://cprof.sourceforge.net) since gprof requires the code to be compiled with -static falg (at least on my system: RedHat 9 + PlanetCCRMA kernel 2.4.26)

2004-06-24  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* (package sequence): created sequence context in order to move sequence dependent stuff outof track